# distributed-streaming

./: Cargo.toml  LICENSE  README.md
.github/workflows/: deploy-api.yaml  deploy-downloader.yaml
api/: Cargo.toml  Dockerfile
api/src/: main.rs  podcast_client.rs
config/: volume.yaml
downloader/: Cargo.toml  Dockerfile
downloader/scripts/: yt-music.py
downloader/src/: main.rs  spotify_client.rs  yt_download.rs
src/: main.rs  spotify_client.rs
