[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json"] } 
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.37.0", features = ["full"] }
futures = "0.3.30"
warp = "0.3.7"
urlencoding = "2.1.3"
dotenv = "0.15.0"
lazy_static = "1.4.0"
uuid = { version = "1.8.0", features = ["v4"] }
