[package]
name = "downloader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
digest = "0.10.7"
dotenv = "0.15.0"
id3 = "1.13.1"
reqwest = { version = "0.12.4", features = ["json", "blocking"] }
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0.116"
sha2 = "0.10.8"
tokio = { version = "1.37.0", features = ["full"] }
